  - Fix problem with subject encoding when using Japanse.
  - Move login_form hook to be actually in the login form.
  - Fix message_details plugin ability to save a raw message.
  - Try better to get the filename of an attachment.
  - Deliver_SMTP class now uses HTTP_HOST in SMTP HELO.  Should fix DNS
    issues some people have reported. (Closes #560524)
	
Version 1.4.0 RC 1
------------------
  - Change the way highlighting rules are stored to make them more reliable and
    easier to manage.
  - Reorganization of conf.pl, menu #2
  - Added CRAM-MD5 and DIGEST-MD5 authentication support for IMAP and SMTP
  - Experimental TLS support for IMAP and SMTP (requires PHP 4.3.x)
  - Override settings with config_local.php
  - Compose form no longer shows attachment options if php file_uploads
  	disabled
  - Improved bodystructure parsing.
  - Support for windows-1257 charset.
  - Optimizations to the number of IMAP calls.
  - Fix problem with IE6 + iso-8859-13.
  - Allow Mail Fetch to use a different POP3 server port number.
  - Force magic_quotes_runtime to be off to avoid problems with this setting.
  - Introduce check_sm_version function for plugins wanting to know
    which version of SquirrelMail this is.
  - Configurable session name to avoid conflicts with other PHP applications.
  - Miscellaneous fixes for systems with error_reporting set to E_ALL.
  - Many many other bugfixes and tweaks!


*************************************
*** SquirrelMail Devel Series 1.3 ***
*************************************


Version 1.3.2
-------------
  - Rewrite of message delivery related functions.
  - User interface modifications.
  - Added Japanese support thanks to Masato HIGASHIYAMA <masato@yamaai-tech.com>
  - Remove NOOP checks in the POP3 client of mail_fetch to make things more
    compatible and not break things which don't need to be broken.
  - Fix src directory being moved on Windows systems, bugs #586518 #605256 #610676.